--- a/css/main.css
+++ b/css/main.css
@@ -9,18 +9,20 @@ section{}
     width: 100%;
     height: 1024px;
     background-color: #F1F9FD;
+    margin: 0 auto;
     position: relative;
 }
-.container .cont1 .middleLine{
+/* .container .cont1 .middleLine{
     position: absolute;
     border-left: 1px solid #999;
-    top: 50%; left: 50%;
-    transform: translate(-50%, -50%);
-}
+    top: 52%; left: 50%;
+    transform: translate(-52%, -50%);
+    height: 650px;
+} */
 .container .cont1 .web_wrap{
     width: 1200px; height: 1024px;
-    background-color: violet;
     margin: 0 auto;
+    
 }
 .container .cont1 .web_wrap h2{
     font-size: 1.875rem;
@@ -29,11 +31,12 @@ section{}
 }
 .container .cont1 .web_wrap .cont_wrap{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    
 }
 .container .cont1 .web_wrap .cont_wrap h3{
     font-size: 1.5625rem;
-    margin-top: 77px;
+    margin: 77px 0 34px 0;
 }
 .container .cont1 .web_wrap .cont_wrap>div .computer{
     margin-bottom: 73px;
@@ -50,16 +53,130 @@ section{}
     left: 100px;
     padding: 20px 35px;
     border-radius: 10px;
+    font-weight: 600;
+    font-size: 18px;
+}
+.container .cont1 .web_wrap .cont_wrap>div .computer .result a:hover{
+    color: #fff;
+    background-color: #000;
 }
 .container .cont1 .web_wrap .cont_wrap>div dl{
     display: flex;
     flex-flow: row wrap; /* 방향설정, 줄바꿈 설정 */
+    align-items: center;
 }
 .container .cont1 .web_wrap .cont_wrap>div dt{
     width: 100px;
-    line-height: 2.2em;
+    line-height: 2em;
+    font-size: 22px;
+    font-weight: 600;
+
 }
-.container .cont1 .web_wrap .cont_wrap>div dd{}
-.container .cont1 .web_wrap .cont_wrap>div dd img{
+.container .cont1 .web_wrap .cont_wrap>div dd{
+    width: calc(100% - 100px);
+    display: flex;
+    font-weight: 300;
+    font-size: 22px;
+
+}
+.container .cont1 .web_wrap .cont_wrap>div dd div{
+    display: flex;
+    align-items: center;
+}
+.container .cont1 .web_wrap .cont_wrap>div dd div img{
     width: 39px; height: auto;
+    margin-right: 15px;
+}
+.container .cont1 .web_wrap .tiffani{
+    margin-left: 200px;
+}
+/* ////////////// 웹리디자인/////////////////// */
+
+
+.container .cont2{
+    width: 100%; height: 1024px;
+}
+.container .cont2 .design_wrap{
+    width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+}
+.container .cont2 .design_wrap .editDesign{
+    width: 600px; height: auto;
+}
+.container .cont2 .design_wrap .editDesign h2{
+    font-size: 1.875rem;
+    font-weight: 600;
+    padding-top: 104px;
+    margin-bottom: 127px;
+}
+.container .cont2 .design_wrap .editDesign .imgLwrap{
+    position: relative;
+    width: 380px; height: auto;
+}
+.container .cont2 .design_wrap .editDesign .imgLwrap img{
+    width: 100%; height: auto;
+}
+.container .cont2 .design_wrap .editDesign .imgLwrap .more{}
+.container .cont2 .design_wrap .editDesign .imgLwrap .more a{
+    width: 200px; height: 53px;
+    display: block;
+    text-align: center;
+    line-height: 53px;
+    border: 1px solid #000;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: -87px;
+    border-radius: 10px;
+    font-weight: 600;
+    font-size: 18px;
+}
+.container .cont2 .design_wrap .editDesign .imgLwrap .more:hover a{
+    color: #fff;
+    background-color: #000;
+}
+
+.container .cont2 .design_wrap .appDesign{
+    width: 600px; height: auto;
+    position: relative;
+    
+}
+.container .cont2 .design_wrap .appDesign h2{
+    font-size: 1.875rem;
+    font-weight: 600;
+    padding-top: 104px;
+    margin-bottom: 127px;
+    display: flex;
+    justify-content: right;
+}
+.container .cont2 .design_wrap .appDesign .imgRwrap{
+    width: auto; height: 370px;
+    margin-right: -110px;
+
+}
+.container .cont2 .design_wrap .appDesign .imgRwrap img{
+    width: 100%; height: auto;
+}
+.container .cont2 .design_wrap .appDesign .more{
+    
+}
+.container .cont2 .design_wrap .appDesign .more a{
+    border: 1px solid #000;
+    position: absolute;
+    bottom: -87px;
+    left: 65%;
+    transform: translateX(-65%);
+    border-radius: 10px;
+    font-weight: 600;
+    font-size: 18px;
+    width: 200px; height: 53px;
+    display: block;
+    text-align: center;
+    line-height: 53px;
+}
+.container .cont2 .design_wrap .appDesign .more:hover a{
+    color: #fff;
+    background-color: #000;
 }
