--- a/css/main.css
+++ b/css/main.css
@@ -180,3 +180,71 @@ section{}
     color: #fff;
     background-color: #000;
 }
+/* /////////////////// 편집 /////////////////// */
+
+.container .cont3{
+    width: 100%; height: 1024px;
+    background-color: #FFF5F8;
+}
+.container .cont3 h2{
+    width: 1200px;
+    font-size: 1.875rem;
+    font-weight: 600;
+    padding-top: 104px;
+    margin: 0 auto;
+    margin-bottom: 45px;
+}
+.container .cont3 .sns_design_1 .swiper-slide img{
+    width: 450px; height: auto;
+    margin-left: 25px;
+    margin-bottom: 40px;
+}
+
+.container .cont3 .sns_design_2 .swiper-wrapper .swiper-slide img{
+    width: auto; height: 300px;
+    margin-left: 25px;
+}
+.container .cont4{
+    width: 1200px; height: 1024px;
+    margin: 0 auto;
+}
+.container .cont4 h2{
+    font-size: 1.875rem;
+    font-weight: 600;
+    padding-top: 104px;
+    margin-bottom: 127px
+}
+.container .cont4 .detailedPage{
+    display: flex;
+    justify-content: space-between;
+}
+.container .cont4 .detailedPage>div{
+    position: relative;
+}
+.container .cont4 .detailedPage>div .d_box{
+    width: 375px; height: 560px;
+    overflow: hidden;
+    border: 1px solid #ddd;
+
+}
+.container .cont4 .detailedPage>div .d_box img{
+    width: 100%;
+}
+.container .cont4 .detailedPage>div .result{
+    height: 53px;
+
+}
+.container .cont4 .detailedPage>div .result a{
+    border: 1px solid #000;
+    position: absolute;
+    left: 100px;
+    padding: 20px 35px;
+    border-radius: 10px;
+    font-weight: 600;
+    font-size: 18px;
+    margin-top: 27px;
+}
+.container .cont4 .detailedPage>div .result:hover a{
+    color: #fff;
+    background-color: #000;
+}
