--- a/css/main.css
+++ b/css/main.css
@@ -7,10 +7,11 @@ section{}
 .container{}
 .container .cont1{
     width: 100%;
-    height: 1024px;
+    height: 100%;
     background-color: #F1F9FD;
     margin: 0 auto;
     position: relative;
+    padding-bottom: 104px;
 }
 /* .container .cont1 .middleLine{
     position: absolute;
@@ -20,7 +21,7 @@ section{}
     height: 650px;
 } */
 .container .cont1 .web_wrap{
-    width: 1200px; height: 1024px;
+    width: 1100px; height: auto;
     margin: 0 auto;
     
 }
@@ -94,13 +95,15 @@ section{}
 
 
 .container .cont2{
-    width: 100%; height: 1024px;
+    width: 100%; height: auto;
+    padding-bottom: 120px;
 }
 .container .cont2 .design_wrap{
-    width: 1200px;
+    width: 1100px;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
+    padding-bottom: 100px;
 }
 .container .cont2 .design_wrap .editDesign{
     width: 600px; height: auto;
@@ -109,7 +112,7 @@ section{}
     font-size: 1.875rem;
     font-weight: 600;
     padding-top: 104px;
-    margin-bottom: 127px;
+    margin-bottom: 50px;
 }
 .container .cont2 .design_wrap .editDesign .imgLwrap{
     position: relative;
@@ -147,7 +150,7 @@ section{}
     font-size: 1.875rem;
     font-weight: 600;
     padding-top: 104px;
-    margin-bottom: 127px;
+    margin-bottom: 50px;
     display: flex;
     justify-content: right;
 }
@@ -183,11 +186,12 @@ section{}
 /* /////////////////// 편집 /////////////////// */
 
 .container .cont3{
-    width: 100%; height: 1024px;
+    width: 100%; height: 100%;
     background-color: #FFF5F8;
+    padding-bottom: 104px;
 }
 .container .cont3 h2{
-    width: 1200px;
+    width: 1000px;
     font-size: 1.875rem;
     font-weight: 600;
     padding-top: 104px;
@@ -195,28 +199,32 @@ section{}
     margin-bottom: 45px;
 }
 .container .cont3 .sns_design_1 .swiper-slide img{
-    width: 450px; height: auto;
+    width: 100%; height: auto;
     margin-left: 25px;
     margin-bottom: 40px;
 }
 
 .container .cont3 .sns_design_2 .swiper-wrapper .swiper-slide img{
-    width: auto; height: 300px;
+    width: 100%; height: auto;
     margin-left: 25px;
 }
 .container .cont4{
-    width: 1200px; height: 1024px;
+    height: 1024px;
     margin: 0 auto;
 }
 .container .cont4 h2{
+    width: 1200px;
     font-size: 1.875rem;
     font-weight: 600;
     padding-top: 104px;
-    margin-bottom: 127px
+    margin: 0 auto;
+    margin-bottom: 45px;
 }
 .container .cont4 .detailedPage{
     display: flex;
     justify-content: space-between;
+    width: 1200px;
+    margin: 0 auto;
 }
 .container .cont4 .detailedPage>div{
     position: relative;
@@ -247,4 +255,15 @@ section{}
 .container .cont4 .detailedPage>div .result:hover a{
     color: #fff;
     background-color: #000;
+}
+.container .cont5{}
+.container .cont5 .thankyou{
+    width: 100%; height: auto;
+}
+.container .cont5 .thankyou img{
+    width: 100%;  height: auto;
+    
+}
+@media all and (min-width: 960px){
+
 }
